--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "description": "As we now complete our MVC conversation, we can refactor our app to use good MVC separation of concerns.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Code Fellows",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.13.3",
     "express-request-proxy": "^2.0.0",
     "pg": "^6.1.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/madhubs/13-production-deployment.git"
+  },
+  "bugs": {
+    "url": "https://github.com/madhubs/13-production-deployment/issues"
+  },
+  "homepage": "https://github.com/madhubs/13-production-deployment#readme"
 }
